--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@ buildscript {
     repositories { jcenter() }
     dependencies {
         classpath 'com.netflix.nebula:gradle-netflixoss-project-plugin:3.2.3'
+        classpath 'com.netflix.nebula:gradle-ospackage-plugin:1.12.2'
     }
 }
 
 apply plugin: 'nebula.netflixoss'
 apply plugin: 'groovy'
 apply plugin: 'idea'
+apply plugin: 'nebula.rpm'
 
 group = 'com.netflix.spinnaker.gradle'
 sourceCompatibility = 1.8
